EditForm- removed default value for PropertyType ManageForms- added space for future help text, cleaned up success toasters ManageInspections- added space for future help text, toaster cleanup MyCart- toaster cleanup Files modified - [ManageInspections,EditForm,ManageForms,MyCart]

--- a/src/main/webapp/pages/ManageForms/ManageForms.html
+++ b/src/main/webapp/pages/ManageForms/ManageForms.html
@@ -27,6 +27,9 @@
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3">
                         <wm-panel iconclass="wi wi-assignment" name="panelMyForms" title="Municipality Forms" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid3">
+                                <wm-gridrow name="gridrow20_1">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn21"></wm-gridcolumn>
+                                </wm-gridrow>
                                 <wm-gridrow name="gridrow6">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn9">
                                         <wm-grid title="" dataset="bind:Variables.lvGetMunicipalityFormTypes.dataSet" navigation="Classic" name="gridFormTypes" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
@@ -59,6 +62,9 @@
                     <wm-gridcolumn columnwidth="12" name="gridcolumn26">
                         <wm-panel iconclass="wi wi-payment" name="panelFormCategories" title="Form Categories" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid6">
+                                <wm-gridrow name="gridrow21_1">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn22"></wm-gridcolumn>
+                                </wm-gridrow>
                                 <wm-gridrow name="gridrow12">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn14">
                                         <wm-livegrid formlayout="dialog" name="livegrid1">
