UserCreation- cleaned up various implementation and added help text VendorApplication- updated help text to match UserCreation Files modified - [VendorApplication,UserCreation]

--- a/src/main/webapp/pages/VendorApplication/VendorApplication.html
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.html
@@ -12,12 +12,12 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow13">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn27_2">
-                        <wm-panel iconclass="wi wi-work" autoclose="outsideClick" title="Contractor Application" name="panelConApp" class="panel-primary">
+                        <wm-panel iconclass="wi wi-assignment" autoclose="outsideClick" title="Contractor Application" name="panelConApp" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid3_1">
                                 <wm-gridrow name="gridrow14">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn28_2">
                                         <wm-label padding="unset 0.5em" name="lblInstructions" caption="If you are a business owner who would like your company to be available in CivicXpress, please begin by providing the following information."></wm-label>
-                                        <wm-label padding="unset 0.5em" name="label3_1" caption="Submitting this &quot;system-level&quot; application will create your company in CivicXpress, set you as the &quot;Company Admin&quot;, and grant you access to a new &quot;My Company&quot; dashboard, where you can then apply to do business in specific municipalities."></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label3_1" caption="Submitting this &quot;system-level&quot; application will create your company in CivicXpress, set you as the &quot;Company Admin&quot;, and grant you access to the &quot;My Company&quot; dashboard, where you can then apply to do business in specific municipalities."></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow15">
