--- a/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
+++ b/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
@@ -17,62 +17,70 @@
                             <wm-layoutgrid columns="1" name="layoutgrid3">
                                 <wm-gridrow name="gridrow21">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn21">
-                                        <wm-form-field name="cxwebsite" displayname="CX Website" show="true" primary-key="false" generator="assigned" key="cxwebsite" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" width="240px"></wm-form-field>
+                                        <wm-form-field name="cxwebsite" displayname="CX Website" show="true" primary-key="false" generator="assigned" key="cxwebsite" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text"
+                                        placeholder="Enter value" width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow22">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn22">
-                                        <wm-form-field name="cxemail" displayname="CX Email Address" show="true" primary-key="false" generator="assigned" key="cxemail" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" width="240px"></wm-form-field>
+                                        <wm-form-field name="cxemail" displayname="CX Email Address" show="true" primary-key="false" generator="assigned" key="cxemail" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text"
+                                        placeholder="Enter value" width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow15" padding="unset unset 3em unset">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn15">
-                                        <wm-form-field name="cxphoneNumber" displayname="CX Phone Number" show="true" primary-key="false" generator="assigned" key="cxphoneNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                        width="240px"></wm-form-field>
+                                        <wm-form-field name="cxphoneNumber" displayname="CX Phone Number" show="true" primary-key="false" generator="assigned" key="cxphoneNumber" type="string" readonly="false" required="false" widget="text" maxchars="255"
+                                        inputtype="text" placeholder="Enter value" width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow16">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn16">
-                                        <wm-form-field name="cxaddress1" displayname="CX Address 1" show="true" primary-key="false" generator="assigned" key="cxaddress1" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                        width="240px"></wm-form-field>
+                                        <wm-form-field name="cxaddress1" displayname="CX Address 1" show="true" primary-key="false" generator="assigned" key="cxaddress1" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text"
+                                        placeholder="Enter value" width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow17">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn17">
-                                        <wm-form-field name="cxaddress2" displayname="CX Address 2" show="true" primary-key="false" generator="assigned" key="cxaddress2" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                        width="240px"></wm-form-field>
+                                        <wm-form-field name="cxaddress2" displayname="CX Address 2" show="true" primary-key="false" generator="assigned" key="cxaddress2" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text"
+                                        placeholder="Enter value" width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow18">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn18">
-                                        <wm-form-field name="cxcity" displayname="CX City" show="true" primary-key="false" generator="assigned" key="cxcity" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" width="240px"></wm-form-field>
+                                        <wm-form-field name="cxcity" displayname="CX City" show="true" primary-key="false" generator="assigned" key="cxcity" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                        width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow19">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn19">
-                                        <wm-form-field name="states" displayname="CX State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="select" dataset="bind:Variables.AllStates.dataSet" datafield="All Fields"
-                                        displayfield="stateName" placeholder="Select value" orderby="stateName:asc" width="240px"></wm-form-field>
+                                        <wm-form-field name="states" displayname="CX State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" readonly="false" required="false" widget="select" dataset="bind:Variables.AllStates.dataSet"
+                                        datafield="All Fields" displayfield="stateName" placeholder="Select value" orderby="stateName:asc" width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow20" padding="unset unset 3em unset">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn20">
-                                        <wm-form-field name="cxpostalCode" displayname="CX Postal Code" show="true" primary-key="false" generator="assigned" key="cxpostalCode" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                        width="240px"></wm-form-field>
+                                        <wm-form-field name="cxpostalCode" displayname="CX Postal Code" show="true" primary-key="false" generator="assigned" key="cxpostalCode" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text"
+                                        placeholder="Enter value" width="240px"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow14" padding="unset unset 3em unset">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn14">
-                                        <wm-form-field name="cxglobalSignature" displayname="CX Global Signature" show="true" primary-key="false" generator="assigned" key="cxglobalSignature" type="string" widget="textarea" maxchars="500" inputtype="text"
-                                        placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="cxmessage" displayname="CX Message" show="true" primary-key="false" generator="assigned" key="cxmessage" type="text" readonly="false" required="false" widget="textarea" maxchars="5000" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow14_1">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn14_1">
-                                        <wm-form-field displayname="CX EULA" widget="richtext" show="true" type="custom" name="cxeula"></wm-form-field>
+                                        <wm-form-field name="cxglobalSignature" displayname="CX Global Signature" show="true" primary-key="false" generator="assigned" key="cxglobalSignature" type="string" readonly="false" required="false" widget="textarea"
+                                        maxchars="500" placeholder="Enter value"></wm-form-field>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow1">
+                                    <wm-gridcolumn name="gridcolumn1" columnwidth="12">
+                                        <wm-form-field name="cxeula" displayname="CX EULA" show="true" primary-key="false" generator="assigned" key="cxeula" type="text" readonly="false" required="false" widget="richtext" maxchars="2147483647" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
-                            <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
+                            <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
                             <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                             <wm-form-action key="reset" display-name="Reset" show="true" class="form-reset btn-secondary" iconclass="wi wi-refresh" title="Reset" action="reset()" disabled="false" type="button" update-mode="true"></wm-form-action>
                         </wm-liveform>
