--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -8,7 +8,7 @@
                     </wm-gridrow>
                     <wm-gridrow name="gridrow9">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn13" class="col-xs-12" horizontalalign="center" height="72px">
-                            <wm-label padding="unset 0.5em" name="labelCXMessage" class="h3" fontweight="bold" textalign="center"></wm-label>
+                            <wm-label padding="unset 0.5em" name="labelCXMessage" class="h3" fontweight="bold" textalign="center" caption="bind:Variables.svFetchCXMessage.dataSet.cxmessage"></wm-label>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow6_1" class="logobg">
