--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -4,10 +4,10 @@
             <wm-container class="cl" width="100%" height="100%" backgroundimage="resources/images/imagelists/login-bg.png" backgroundrepeat="no-repeat" backgroundposition="0 0" backgroundsize="100% 100%" backgroundattachment="fixed" name="loginPageContainer">
                 <wm-layoutgrid name="loginGrid" height="100%">
                     <wm-gridrow name="gridrow10">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn14_1" height="17px"></wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="12" name="gridcolumn14_1" height="8px"></wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow9">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn13" class="col-xs-12" horizontalalign="center" height="72px">
+                        <wm-gridcolumn columnwidth="12" name="gridcolumn13" class="col-xs-12" horizontalalign="center" height="81px" padding="unset 5%">
                             <wm-label padding="unset 0.5em" name="labelCXMessage" class="h3" fontweight="bold" textalign="center" caption="bind:Variables.svFetchCXMessage.dataSet.cxmessage"></wm-label>
                         </wm-gridcolumn>
                     </wm-gridrow>
